--- a/.golangci.yml
+++ b/.golangci.yml
@@ -38,6 +38,7 @@ linters:
     - fatcontext
     - forbidigo
     - funlen
+    - funcorder
     - gocheckcompilerdirectives
     - gochecknoglobals
     - gochecknoinits
