chore: fixing some golangci-lint issues

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -46,6 +46,7 @@ linters:
     - tagliatelle  # No need for tags.
     - testpackage  # We are testing using google tools.
     - thelper  # We are testing using google tools.
+    - noinlineerr  # I prefer having inline errors.
     - varnamelen  # If applicable, to be checked in a code review.
     - wrapcheck  # Too many false positives for return values defined in internal packages.
     - wsl  # Deprecated, using wsl_v5
