--- a/.golangci.yml
+++ b/.golangci.yml
@@ -142,6 +142,9 @@ linters:
         - .*
     revive:
       rules:
+        - name: enforce-slice-style
+          arguments:
+            - make
         - name: filename-format
           arguments:
             - ^[a-z][_a-z0-9]*.go$
@@ -155,6 +158,8 @@ linters:
       os-temp-dir: true
 
   exclusions:
+    paths:
+      - internal/api/rest/gen\.go
     presets:
       - comments
       - common-false-positives
