--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.13",
+    "daisyui": "^5.1.10",
+    "install": "^0.13.0",
     "pinia": "^3.0.3",
+    "tailwindcss": "^4.1.13",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
