--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
     "@fontsource/roboto": "5.2.6",
     "@mdi/font": "7.4.47",
     "axios": "^1.11.0",
+    "axios-cookiejar-support": "^6.0.4",
     "pinia": "^3.0.3",
+    "tough-cookie": "^6.0.0",
     "vue": "^3.5.17",
     "vuetify": "^3.9.1"
   },
