--- a/.codespellrc
+++ b/.codespellrc
@@ -2,4 +2,4 @@
 [codespell]
 # Comma separated list of words to be ignored. Words must be lowercased.
 ignore-words-list = decorder
-skip = go.mod,go.sum,.gitignore,./static/swagger-ui
+skip = go.mod,go.sum,.gitignore,./static/swagger-ui,./web/pnpm-lock.yaml,./web/node_modules,./web/dist
