feat: use VueJS frontend (#52)

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -24,7 +24,7 @@ jobs:
           go mod tidy
           git diff --exit-code go.mod
           git diff --exit-code go.sum
-  golangci:
+  lint:
     name: lint
     runs-on: ${{ matrix.os }}
     strategy:
@@ -36,10 +36,19 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go }}
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 10
+      - name: Install dependencies
+        run: pnpm -C web install
+      - name: Lint
+        run: pnpm -C web lint
+      - name: Build
+        run: pnpm -C web build
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v8
         with:
-          version: v2.2
+          version: v2.4
 
   spell:
     name: "Spell check"
