--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -50,7 +50,7 @@ jobs:
         with:
           version: v2.4
       - name: Dockerfile lint
-        if: ${{ matrix.os == 'ubuntu-latest' }}
+        if: ${{ matrix.os == 'ubuntu-latest' && matrix.go == 'stable' }}
         uses: hadolint/hadolint-action@v3.1.0
         with:
           dockerfile: Dockerfile
