--- a/.markdownlint-cli2.jsonc
+++ b/.markdownlint-cli2.jsonc
@@ -15,7 +15,7 @@
       "line_length": 180,
       "code_blocks": false
     },
-    // MD033/no-inline-html : Inline HTML : https://github.com/DavidAnson/markdownlint/blob/v0.32.1/doc/md033.md
+    // MD033/no-inline-viewhtml : Inline HTML : https://github.com/DavidAnson/markdownlint/blob/v0.32.1/doc/md033.md
     "MD033": {
       "allowed_elements": []
     }
